# desktop-app

./: .gitignore  Cargo.toml  README.md  STATUS.md  TASK1_前端专业化升级.md  TASK2_自描述版本化算子.md  TASK_Hera桌面处理平台_MVP.md  config.example.toml  hera-desktop-session-notes.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.codeup/: flow.yml
.github/workflows/: release.yml
design/Qt风格UI设计方案-handoff/qt-ui/: README.md
docker/: tauri-builder.Dockerfile
operators/glim-export-pcd/: Dockerfile  build.sh  entrypoint.sh  export_map_pcd.py  operator.json  operator_self_describe.json
operators/glim-recon/: Dockerfile.describe  build.sh  entrypoint.sh  operator.json  operator_self_describe.json
operators/hera-convert/: Dockerfile.describe  build.sh  entrypoint.sh  operator.json  operator_self_describe.json
runner/: Cargo.toml
runner/src/: config.rs  container.rs  dag.rs  docker_diag.rs  hera_format.rs  injector.rs  lib.rs  main.rs  manifest.rs  registry.rs  workflow.rs
scripts/: register_operators.py  register_operators.sh
src/: App.tsx  api.ts  global.css  main.tsx  style.css  theme.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  state.rs
src/components/: ErrorBoundary.tsx  ErrorState.tsx  Loading.tsx  LogViewer.tsx  toast.ts
src/views/: DataView.tsx  MemoryView.tsx  OperatorsView.tsx  RunView.tsx  SettingsView.tsx  TaskView.tsx
workflows/: hera_to_bag.json  reconstruct_pointcloud.json
(+4 files in other folders)
