[package]
name = "hera-runner"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "hera-run"
path = "src/main.rs"

[lib]
name = "hera_runner"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
rusqlite = { version = "0.31", features = ["bundled"] }
jsonpath-rust = "0.7"
walkdir = "2"
toml = "0.8"
dirs-next = "2"
